--- a/backend/Ballerina.toml
+++ b/backend/Ballerina.toml
@@ -120,3 +120,33 @@ version = "1.1"
 groupId = "org.codehaus.mojo"
 artifactId = "animal-sniffer-annotations"
 version = "1.14"
+
+# transitive dependency of TraversePack:TraversePack:1.0-SNAPSHOT
+[[platform.java11.dependency]]
+groupId = "org.apache.logging.log4j"
+artifactId = "log4j-core"
+version = "2.17.0"
+
+# transitive dependency of org.apache.logging.log4j:log4j-core:2.17.0
+[[platform.java11.dependency]]
+groupId = "org.apache.logging.log4j"
+artifactId = "log4j-api"
+version = "2.17.0"
+
+# transitive dependency of TraversePack:TraversePack:1.0-SNAPSHOT
+[[platform.java11.dependency]]
+groupId = "org.apache.logging.log4j"
+artifactId = "log4j-jpl"
+version = "2.17.0"
+
+# transitive dependency of TraversePack:TraversePack:1.0-SNAPSHOT
+[[platform.java11.dependency]]
+groupId = "org.apache.logging.log4j"
+artifactId = "log4j-api"
+version = "2.14.1"
+
+# transitive dependency of TraversePack:TraversePack:1.0-SNAPSHOT
+[[platform.java11.dependency]]
+groupId = "org.apache.logging.log4j"
+artifactId = "log4j-core"
+version = "2.14.1"
